# gradio_image_annotator

./: LICENSE  README.md  README_.md  package-lock.json  package.json  pyproject.toml
backend/gradio_image_annotation/: image_annotator.py
backend/gradio_image_annotation/templates/component/: index.js  style.css  wrapper-6f348d45-DjpFDl6n.js
backend/gradio_image_annotation/templates/example/: index.js  style.css
backend/gradio_image_annotator/: __init__.py
backend/gradio_image_annotator/templates/component/: index.js
backend/gradio_image_annotator/templates/example/: index.js  style.css
demo/: app.py  space.py
frontend/: Example.svelte  Index.svelte  package-lock.json  package.json
frontend/shared/: AnnotatedImageData.ts  Box.ts  Canvas.svelte  Colors.js  ImageAnnotator.svelte  ImageCanvas.svelte  ModalBox.svelte  WindowViewer.ts
frontend/shared/icons/: Add.svelte  BoundingBox.svelte  Hand.svelte  Label.svelte  Lock.svelte  Trash.svelte  Unlock.svelte  index.ts
frontend/shared/patched_dropdown/: package.json
frontend/shared/patched_dropdown/shared/: Dropdown.svelte  DropdownOptions.svelte
